<resources>
    <string name="app_name">AudioVideoStudy</string>
    <string name="show_pic_by_imageview">ImageView显示图片</string>
    <string name="show_pic_by_customview">自定义View显示图片</string>
    <string name="show_pic_by_surfaceview">SurfaceView显示图片</string>
    <string name="show_picture">显示图片</string>
    <string name="audio_record_track">采集PCM数据并播放,同时生成wav文件</string>
    <string name="start_record">开始录制</string>
    <string name="stop_record">停止录制</string>
    <string name="start_play">开始播放PCM数据</string>
    <string name="stop_play">停止播放PCM数据</string>
    <string name="recording">正在录制中，请勿进行其他操作</string>
    <string name="stop_recording">停止录制</string>
    <string name="playing">正在播放，请勿进行其他操作</string>
    <string name="pcm_to_wav">PCM转WAV</string>
    <string name="camera_preview">用Camera进行视频采集，并获取NV21数据</string>
    <string name="surface_view_preview">SurfaceView预览</string>
    <string name="texture_view_preview">TextureView预览</string>
    <string name="take_photo">拍照</string>
    <string name="media_extractor_muxer">MediaExtractor MediaMuxer解析封装Mp4文件</string>
    <string name="extractor_video">抽取视频文件</string>
    <string name="extractor_audio">抽取音频文件</string>
    <string name="muxer_video_audio">合成视频音频</string>
    <string name="canvas_triangle_by_opengl">使用 OpenGL 绘制一个三角形</string>
    <string name="draw_image_by_opengl">使用OpenGL显示一张图片</string>
    <string name="mediacodec_aac">MediaCodec AAC硬编硬解</string>
    <string name="mediacodec_mp3_pcm_aac">点击开始编解码，解码mp3,编码aac</string>
    <string name="mediacodec_decode_video">MediaCodec视频H.264硬解</string>
    <string name="click_decode_video">点击开始视频解码</string>
    <string name="release_decode_video">释放解码资源</string>
</resources>
