<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/show_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showPicture"
            android:textColor="@android:color/black"
            android:text="@string/show_picture"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getPCMAndPlay"
            android:textColor="@android:color/black"
            android:text="@string/audio_record_track"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cameraPreview"
            android:textColor="@android:color/black"
            android:text="@string/camera_preview"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mediaExtractorMuxer"
            android:textColor="@android:color/black"
            android:text="@string/media_extractor_muxer"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openGLCanvasTriangle"
            android:textColor="@android:color/black"
            android:text="@string/canvas_triangle_by_opengl"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openGLDrawImage"
            android:textColor="@android:color/black"
            android:text="@string/draw_image_by_opengl"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
