<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showPicByImageView"
            android:text="@string/show_pic_by_imageview"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showPicByCustomView"
            android:text="@string/show_pic_by_customview"
            android:textColor="@android:color/black" />

        <com.lewis.audiovideostudy.view.ShowPictureView
            android:id="@+id/custom_pic_view"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_pic_by_surfaceview"
            android:textColor="@android:color/black" />

        <SurfaceView
            android:id="@+id/surfaceview"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
